*added config for db pool size, db timeout and db max concurrent requests
